# vscode-cpp-config

./: .clang-tidy  CMakeLists.txt  README.md  index.md
cmake/: Doxygen.cmake  StaticAnalyzers.cmake
docs/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
